--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">NESC 3505</h1>
+      <h1 class="project-name">Syllabus: NESC 3505</h1>
       <h2 class="project-tagline">Neural Data Science @ Dalhousie University</h2>
       {% if site.github.is_project_page %}
         <a href="http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&entitytype=CID&entitycode=NESC+3505" class="btn">View on Dal.ca</a>
