--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,7 +10,7 @@ $header-bg-color-secondary: #0F4C81 !default;
 // Text
 $section-headings-color: #0F4C81 !default;
 $body-text-color: #373838 !default;
-$body-link-color: #7FC844 !default;
+$body-link-color: #A5B8D0 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
