--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -20,4 +20,4 @@ $code-text-color: #567482 !default;
 // Borders
 $border-color: #dce6f0 !default;
 $table-border-color: #DBCBBE !default;
-$hr-border-color: #DBCBBE !default;
+$hr-border-color: #A5B8D0 !default;
