--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -29,7 +29,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   color: $body-text-color;
 }
@@ -324,6 +324,8 @@ a {
       border: 1px solid $table-border-color;
     }
   }
+  tr:nth-child(even) {background-color: #F1EEE8;}
+
 
   dl {
     padding: 0;
