--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,7 @@
   <head>
 
     {% if site.google_analytics %}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171426664-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-171426664-1');
-    </script>
-
+    {% include analytics.html %}
     {% endif %}
     <meta charset="UTF-8">
 
