--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
         <a = href="https://dalpsychneuro.github.io/NESC_3505/syllabus#grading">Grading</a> |
         <a = href="https://dalpsychneuro.github.io/NESC_3505/schedule">Schedule</a> |
         <a = href="https://dalpsychneuro.github.io/NESC_3505_textbook">Textbook</a>
+        <a = href="https://youtube.com/playlist?list=PLtfEWMIgWS22MMZjPIzBRE2cHhMcvEKwp">Videos</a>
       {{ content }}
 
       <footer class="site-footer">
