changed theme color to one in our colour theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
+    <meta name="theme-color" content="#F26B5B">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <!-- Favicon head tag -->
@@ -39,7 +39,7 @@
         <a = href="https://dalpsychneuro.github.io/NESC_3505/syllabus">Syllabus</a> |
         <a = href="https://dalpsychneuro.github.io/NESC_3505/syllabus#grading">Grading</a> |
         <a = href="https://dalpsychneuro.github.io/NESC_3505/schedule">Schedule</a> |
-        <a = href="https://dalpsychneuro.github.io/NESC_3505_textbook">Textbook</a> | 
+        <a = href="https://dalpsychneuro.github.io/NESC_3505_textbook">Textbook</a> |
         <a = href="https://youtube.com/playlist?list=PLtfEWMIgWS22MMZjPIzBRE2cHhMcvEKwp">Videos</a>
       {{ content }}
 
