--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,11 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-        <a = href="https://dalpsychneuro.github.io/NESC_3505">Home</a> |
-        <a = href="https://dalpsychneuro.github.io/NESC_3505/syllabus">Syllabus</a> |
-        <a = href="https://dalpsychneuro.github.io/NESC_3505/syllabus#grading">Grading</a> |
-        <a = href="https://dalpsychneuro.github.io/NESC_3505/schedule">Schedule</a> |
-        <a = href="https://dalpsychneuro.github.io/NESC_3505_textbook">Textbook</a> |
+        <a = href="https://neural-data-science.github.io/NESC_3505">Home</a> |
+        <a = href="https://neural-data-science.github.io/NESC_3505/syllabus">Syllabus</a> |
+        <a = href="https://neural-data-science.github.io/NESC_3505/syllabus#grading">Grading</a> |
+        <a = href="https://neural-data-science.github.io/NESC_3505/schedule">Schedule</a> |
+        <a = href="https://neural-data-science.github.io/NESC_3505_textbook">Textbook</a> |
         <a = href="https://youtube.com/playlist?list=PLtfEWMIgWS22MMZjPIzBRE2cHhMcvEKwp">Videos</a>
       {{ content }}
 
