--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
         <a = href="https://neural-data-science.github.io/NESC_3505/schedule">Schedule</a> |
         <a = href="https://neural-data-science.github.io/NESC_3505_textbook">Textbook</a> |
         <a = href="https://youtube.com/playlist?list=PLtfEWMIgWS22MMZjPIzBRE2cHhMcvEKwp">Videos</a>
+        <a = href="">Rubrics</a> |
       {{ content }}
 
       <footer class="site-footer">
